Set up I2C wrapper for DS1803
Currently ready to code with hardware

--- a/STM32/5780-6780-Final-Project/MDK-ARM/5780-6780-Final-Project.uvprojx
+++ b/STM32/5780-6780-Final-Project/MDK-ARM/5780-6780-Final-Project.uvprojx
@@ -420,6 +420,11 @@
               <FileType>1</FileType>
               <FilePath>..\Core\Src\i2c.c</FilePath>
             </File>
+            <File>
+              <FileName>ds1803i2c.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\ds1803i2c.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
